Added class for drawing full size image

--- a/ImageRotater.vcxproj
+++ b/ImageRotater.vcxproj
@@ -190,6 +190,7 @@
     <ClInclude Include="ImageDlg.h" />
     <ClInclude Include="ImageRotater.h" />
     <ClInclude Include="ImageRotaterDlg.h" />
+    <ClInclude Include="Pixel.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
