--- a/ImageRotater.vcxproj.filters
+++ b/ImageRotater.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="ImageDlg.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Pixel.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ImageRotater.cpp">
