--- a/ImageRotater.vcxproj
+++ b/ImageRotater.vcxproj
@@ -187,6 +187,7 @@
   <ItemGroup>
     <ClInclude Include="Draw2D.h" />
     <ClInclude Include="DrawGraph.h" />
+    <ClInclude Include="FullSizeImage.h" />
     <ClInclude Include="ImageDlg.h" />
     <ClInclude Include="ImageRotater.h" />
     <ClInclude Include="ImageRotaterDlg.h" />
@@ -198,6 +199,7 @@
   <ItemGroup>
     <ClCompile Include="Draw2D.cpp" />
     <ClCompile Include="DrawGraph.cpp" />
+    <ClCompile Include="FullSizeImage.cpp" />
     <ClCompile Include="ImageDlg.cpp" />
     <ClCompile Include="ImageRotater.cpp" />
     <ClCompile Include="ImageRotaterDlg.cpp" />
